# maxtree

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.py
cppsrc/: .cproject  .project  CMakeLists.txt  maxtree.cpp  maxtree.h  maxtree_test.cpp  torch.cpp
cppsrc/Debug/: makefile  maxtree.d  maxtree_test.d  sources.mk  subdir.mk
example/: differential.ipynb  example.py
maxtree/: __init__.py  component_tree.py  component_tree_test.py  maxtree.i  maxtree.py  maxtree_torch.py  maxtree_wrap.cpp  setup.py
publication/: README.md
test/: component_tree_test.py  maxtree_torch_test.py
